Fix default encoding to UTF-8

REVIEW: 128036
BUG: 362604